scode/TeamDigital/prob19/error.txt
main.c:22:1: error: unknown type name 'card'; use 'struct' keyword to refer to the type
   22 | card Deck[72];
      | ^~~~
      | struct 
